added output field

--- a/contact.html
+++ b/contact.html
@@ -16,49 +16,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">erikmura</a>
+                    <a class="navbar-brand" href="#">erikmura</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="about.html" class="link">About Me</a></li>
-                        <li><a href="contact.html" class="link">Contact Me</a></li>
+                        <li><a href="#" class="link">About Me</a></li>
+                        <li><a href="#" class="link">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-4 col-md-5 col-lg-5 pull-left">
-                    <form>
-                        <label for="city" class="city">City</label>
-                        <input name="city" placeholder="Denver" class="city">
-                        <label for="state" class="state">State</label>
-                        <input name="state" placeholder="Colorado" class="state">
-                        <label for="zip" class="zip">ZIP Code</label>
-                        <input name="zip" placeholder="80246" class="zip">
-                        <input id="submit" name="submit" type="submit" value="Submit">
-                    </form>
-                </div>
-                <div class="col-xs-8 col-md-7 col-lg-7 pull-right">
-                    <div id="map"></div>
-                </div>
-            </div>
-        </div>
+        
 
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-2 col-md-2 col-lg-2"></div>
-                <div class="col-xs-8 col-md-8 col-lg-8">
-                    <div class="list-group">
-                      <a href="#" class="list-group-item"></a>
-                      <a href="#" class="list-group-item"></a>
-                      <a href="#" class="list-group-item"></a>
-                    </div>
-                </div>
-                <div class="col-xs-2 col-md-2 col-lg-2"></div>
-            </div>
-        </div>
+
 
 
 
