Pulling Correct Information

--- a/about.html
+++ b/about.html
@@ -16,19 +16,19 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">erikmura</a>
+                    <a class="navbar-brand" href="index.html">erikmura</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" class="link">About Me</a></li>
-                        <li><a href="#" class="link">Contact Me</a></li>
+                        <li><a href="about.html" class="link">About Me</a></li>
+                        <li><a href="contact.html" class="link">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-    
 
+        
 
 
         <nav class="navbar navbar-default navbar-fixed-bottom">
