--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 </div>
             </div>
         </nav>
+        <div class="title">
+         <h1>BEER ME!</h1>
+        </div><div class="title">
+         <h3>Beer is living proof that God loves use and wants us to be happy</h3>
+        </div>
 
         <div class="container">
             <div class="row">
@@ -35,8 +40,6 @@
                         <input name="city" placeholder="Denver" class="city">
                         <label for="state" class="state">State</label>
                         <input name="state" placeholder="Colorado" class="state">
-                        <label for="zip" class="zip">ZIP Code</label>
-                        <input name="zip" placeholder="80246" class="zip">
                         <input id="submit" name="submit" type="submit" value="Submit">
                     </form>
                 </div>
@@ -63,20 +66,18 @@
 
 
 
-        <nav class="navbar navbar-default navbar-fixed-bottom">
+        <!-- <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">&copy; Erik Mura 2016</a>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
 
 
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="style/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQyDnm6H3It-f7cerap0PQKQgO6pHXXNc&callback=initMap" async defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
