--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-4 col-md-5 col-lg-5 pull-left">
+                    <h4>Please search by city and state</h4>
                     <form>
                         <label for="city" class="city">City</label>
                         <input name="city" placeholder="Denver" class="city">
@@ -44,24 +45,15 @@
                     </form>
                 </div>
                 <div class="col-xs-8 col-md-7 col-lg-7 pull-right">
-                    <div id="map"></div>
+                    <h4>List of Breweries</h4>
+                    <ul class="list-group">
+                        <!--- List Items populate here --->
+                    </ul>
                 </div>
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-2 col-md-2 col-lg-2"></div>
-                <div class="col-xs-8 col-md-8 col-lg-8">
-                    <div class="list-group">
-                      <a href="#" class="list-group-item"></a>
-                      <a href="#" class="list-group-item"></a>
-                      <a href="#" class="list-group-item"></a>
-                    </div>
-                </div>
-                <div class="col-xs-2 col-md-2 col-lg-2"></div>
-            </div>
-        </div>
+
 
 
 
