Locations work for 1 or multiple pages

--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
 
 
 
-
-
-        <!-- <nav class="navbar navbar-default navbar-fixed-bottom">
+        <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">&copy; Erik Mura 2016</a>
                 </div>
             </div>
-        </nav> -->
+        </nav>
 
 
 
