--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             </div>
         </nav>
         <div class="title">
-         <h1>BEER ME!</h1>
+         <h1 class="title">BEER ME!</h1>
         </div><div class="title">
-         <h3>Beer is living proof that God loves use and wants us to be happy</h3>
+         <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
         </div>
 
         <div class="container">
@@ -52,8 +52,6 @@
                 </div>
             </div>
         </div>
-
-
 
 
         <nav class="navbar navbar-default navbar-fixed-bottom">
