--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-4 col-md-5 col-lg-5 pull-left">
+                <div class="col-xs-4 col-md-6 col-lg-12">
                     <h4>Please search by city and state</h4>
                     <form>
                         <label for="city" class="city">City</label>
@@ -44,16 +44,23 @@
                         <input id="submit" name="submit" type="submit" value="Submit">
                     </form>
                 </div>
-                <div class="col-xs-8 col-md-7 col-lg-7 pull-right">
-                    <h4>List of Breweries</h4>
-                    <ul class="list-group">
-                        <!--- List Items populate here --->
-                    </ul>
+                <div class="col-xs-4 col-md-8 col-lg-12" style="height:400px;overflow:auto;">
+                    <table class="table table-striped table-hover " summary="Events description">
+                        <thead>
+                            <tr>
+                                <th id="brewery">Brewery</th>
+                                <th id="desc">Description</th>
+                                <th id="website">Website </th>
+                            </tr>
+                        </thead>
+                        <tbody id="eventsTable">
+                            <tr>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
-
-
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -61,9 +68,6 @@
                 </div>
             </div>
         </nav>
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="style/main.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
