--- a/contact.html
+++ b/contact.html
@@ -26,28 +26,30 @@
                 </div>
             </div>
         </nav>
+        <div class="title">
+         <h1 class="title">BEER ME!</h1>
+        </div><div class="title">
+         <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
+        </div>
 
-
-
-
-
-
-
-
-        <nav class="navbar navbar-default navbar-fixed-bottom">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">&copy; Erik Mura 2016</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-12 col-lg-12">
+                    <h4>Please search by city and state</h4>
+                    <form>
+                        <label for="city" class="city">City</label>
+                        <input name="city" placeholder="Denver" class="city">
+                        <label for="state" class="state">State</label>
+                        <input name="state" placeholder="Colorado" class="state">
+                        <input id="submit" name="submit" type="submit" value="Submit">
+                    </form>
                 </div>
             </div>
-        </nav>
+        </div>
 
-
-
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="style/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQyDnm6H3It-f7cerap0PQKQgO6pHXXNc&callback=initMap" async defer></script>
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
