--- a/about.html
+++ b/about.html
@@ -26,25 +26,23 @@
                 </div>
             </div>
         </nav>
+        <div class="title">
+         <h1 class="title">ABOUT ME!</h1>
+        </div><div class="title">
+         <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
+        </div>
 
-
-        
-
-
-        <nav class="navbar navbar-default navbar-fixed-bottom">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">&copy; Erik Mura 2016</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-12 col-lg-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
-        </nav>
+        </div>
 
-
-
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="style/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQyDnm6H3It-f7cerap0PQKQgO6pHXXNc&callback=initMap" async defer></script>
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
