--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
         <link rel="stylesheet" href="style/main.css">
         <title>Beer Me!</title>
     </head>
@@ -16,7 +18,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">erikmura</a>
+                    <a class="navbar-brand" href="index.html">BEER ME!</a>
+                    <img src="images/icon.png">
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -26,16 +29,11 @@
                 </div>
             </div>
         </nav>
-        <div class="title">
-         <h1 class="title">ABOUT ME!</h1>
-        </div><div class="title">
-         <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-        </div>
-
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-12 col-lg-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="col-lg-6 col-lg-offset-3">
+                    <h1 class="title">ABOUT ME!</h1>
+                    <p>My name is Erik Mura and I am a student at Galvanize. This is my very first web app I've created, I hope you like it. Please feel free to go search for breweries all over the US!</p>
                 </div>
             </div>
         </div>
