--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
         <link rel="stylesheet" href="style/main.css">
 
         <title>Beer Me!</title>
@@ -18,7 +20,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">erikmura</a>
+                    <a class="navbar-brand" href="index.html">BEER ME!</a>
+                    <img src="images/icon.png">
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -28,15 +31,17 @@
                 </div>
             </div>
         </nav>
-        <div class="title">
-         <h1 class="title">BEER ME!</h1>
-        </div><div class="title">
-         <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-        </div>
+
+
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-12 col-lg-12">
+                <div class="col-xs-6 col-md-6 col-lg-6">
+                    <h1 class="title">BEER ME!</h1>
+                    <h5>Welcome to BEER ME! Let us find you a local brewery.</h5>
+                    <img src="images/beer.jpg" id="beer">
+                </div>
+                <div class="col-xs-6 col-md-6 col-lg-6">
                     <h4>Please search by city and state</h4>
                     <form>
                         <label for="city" class="city">City</label>
@@ -46,7 +51,8 @@
                         <input id="submit" name="submit" type="submit" value="Submit">
                     </form>
                 </div>
-                <div class="col-xs-12 col-md-12 col-lg-12" style="height:400px;overflow:auto;">
+                <div class="col-xs-12 col-md-12 col-lg-12" style="height:400px;overflow:auto;margin-bottom:50px">
+                    <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
                     <table class="table table-striped table-hover " summary="Events description">
                         <thead>
                             <tr>
