--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
         <link rel="stylesheet" href="style/main.css">
+
         <title>Beer Me!</title>
     </head>
     <body>
@@ -16,7 +19,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">erikmura</a>
+                    <a class="navbar-brand" href="index.html">BEER ME!</a>
+                    <img src="images/icon.png">
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -26,30 +30,31 @@
                 </div>
             </div>
         </nav>
-        <div class="title">
-         <h1 class="title">BEER ME!</h1>
-        </div><div class="title">
-         <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-        </div>
+
+
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-12 col-lg-12">
-                    <h4>Please search by city and state</h4>
-                    <form>
-                        <label for="city" class="city">City</label>
-                        <input name="city" placeholder="Denver" class="city">
-                        <label for="state" class="state">State</label>
-                        <input name="state" placeholder="Colorado" class="state">
-                        <input id="submit" name="submit" type="submit" value="Submit">
-                    </form>
+                <div class="col-xs-6 col-md-6 col-lg-6 col-lg-offset-3">
+                    <h1 class="title">CONTACT ME!</h1>
+                    <h5>Please contact me below!</h5>
                 </div>
             </div>
         </div>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputName2">Name</label>
+                <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+                <label for="exampleInputEmail2">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+                <label for=" Email1msg">Message</label>
+                <textarea class="form-control" rows="5" placeholder="Input your message here!"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send invitation</button>
+        </form>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="style/main.js"></script>
-    </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
