--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
@@ -37,6 +38,20 @@
                 </div>
             </div>
         </div>
+
+
+        <nav class="navbar navbar-default navbar-fixed-bottom" id="nav-bottom">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <img src="images/icon.png">
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html" class="link">&copy;Erik Mura 2016</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="style/main.js"></script>
