--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-
+        <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -23,9 +23,9 @@
                     </button>
                     <a class="navbar-brand" href="index.html">BEER ME!</a>
                 </div>
-<div class="navbar-header">
-                <img src="images/icon.png">
-            </div>
+                <div class="navbar-header">
+                    <img src="images/icon.png">
+                </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="about.html" class="link">About Me</a></li>
@@ -39,12 +39,12 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-md-12 col-lg-6">
                     <h1 class="title">BEER ME!</h1>
                     <h5>Welcome to BEER ME! Let us find you a local brewery.</h5>
                     <img src="images/beer.jpg" id="beer">
                 </div>
-                <div class="col-xs-6 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-md-12 col-lg-6">
                     <h4>Please search by city and state</h4>
                     <form>
                         <label for="city" class="city">City</label>
@@ -72,6 +72,19 @@
                 </div>
             </div>
         </div>
+
+        <nav class="navbar navbar-default" id="nav-bottom">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <img src="images/icon.png">
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html" class="link">&copy;Erik Mura 2016</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
