--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <input id="submit" name="submit" type="submit" value="Submit">
                     </form>
                 </div>
-                <div class="col-xs-12 col-md-12 col-lg-12" style="height:400px;overflow:auto;margin-bottom:50px">
+                <div class="col-xs-12 col-md-10 col-lg-10 col-lg-offset-1" style="height:400px;overflow:auto;margin-bottom:50px">
                     <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
                     <table class="table table-striped table-hover " summary="Events description">
                         <thead>
