added landing page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                <h4>Please search by city and state</h4>
                <form>
                   <label for="city" class="city">City</label>
-                  <input name="city" placeholder="Denver" class="city">
+                  <input type="text" name="city" placeholder="Denver" class="city" id="city">
                   <label for="state" class="state">State</label>
-                  <input name="state" placeholder="Colorado" class="state">
+                  <input type="text" name="state" placeholder="Colorado" class="state" id="state">
                   <input id="submit" name="submit" type="submit" value="Submit">
                </form>
             </div>
