--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <label for=" Email1msg">Message</label>
                 <textarea class="form-control" rows="5" placeholder="Input your message here!"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Send invitation</button>
+            <button type="submit" class="btn btn-primary">Send</button>
         </form>
         <nav class="navbar navbar-default" id="nav-bottom">
             <div class="container-fluid">
