--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
          </div>
       </div>
    </nav>
-   <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
+   <h3 class="quote"></h3>
    <div class="container-fluid">
       <div class="row">
          <div class="col-xs-8 col-md-10 col-lg-4 col-xs-offset-2 col-md-offset-1 col-lg-offset-0">
